--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
       padding:40px 24px;
       text-align:center;
     }
+    header img{
+      max-width:140px;
+      margin-bottom:16px;
+    }
     header h1{font-size:36px;margin-bottom:8px}
     header p{font-size:18px;color:#e0e7ff}
     .container{max-width:1100px;margin:40px auto;padding:0 24px}
@@ -65,6 +69,7 @@
 </head>
 <body>
   <header>
+    <img src="Imagen de WhatsApp 2025-08-23 a las 14.53.35_aaf97b00.jpg" alt="Logo Entre Copas y Contactos" />
     <h1>Entre Copas y Contactos</h1>
     <p>Networking Profesional en un Ambiente Distendido</p>
   </header>
