--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 </head>
 <body>
   <header>
-    <img src="Imagen de WhatsApp 2025-08-23 a las 14.53.35_aaf97b00.jpg" alt="Logo Entre Copas y Contactos" />
+    <img src="logo" alt="Logo Entre Copas y Contactos" />
     <h1>Entre Copas y Contactos</h1>
     <p>Networking Profesional en un Ambiente Distendido</p>
   </header>
