Prime rComit}ddeess

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Entre Copas y Contactos — Evento de Networking</title>
+  <title>Entre Copas y Contactos | La Oficina Bar /title>
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
   <style>
@@ -29,7 +29,7 @@
     .card:hover{transform:translateY(-6px)}
     h2{margin-bottom:20px;color:var(--primary);font-size:26px;font-weight:700;display:flex;align-items:center;gap:10px}
     h3{margin-bottom:14px;color:var(--secondary)}
-    .meta{background:#f0e4d3;padding:18px;border-radius:10px;display:flex;align-items:center;gap:10px;font-weight:500}
+    .meta{background:#f0e4d3;padding:18px;border-radius:10px;display:flex;align-items:center;gap:10px;font-weight:500;margin-bottom:12px}
     .btn{display:inline-block;background:var(--accent);color:#fff;padding:16px 28px;border-radius:10px;font-weight:600;text-decoration:none;transition:all .2s ease;margin-top:20px}
     .btn:hover{background:#c99763}
     footer{background:#3f2f25;color:#e5ded6;text-align:center;padding:36px;font-size:15px;margin-top:60px}
@@ -46,88 +46,103 @@
   </header>
 
   <div class="container">
-    <section class="promo">🎉 ¡No te lo pierdas! Jueves 19 de septiembre en La Oficina Bar — Networking, música, cócteles y muchas oportunidades de conexión 🚀</section>
+    <section class="promo">🎉 ¡No te lo pierdas! Networking, música, cócteles y oportunidades de conexión 🚀</section>
 
-    <div class="grid-2">
-      <section class="card">
-        <h2>📖 Introducción</h2>
-        <p>“Entre Copas y Contactos” convierte el After Office en un espacio estratégico para crear vínculos profesionales. En La Oficina Bar, el ambiente cálido y auténtico sirve como escenario perfecto para emprendedores, empresarios y creativos que buscan ampliar su red de contactos.</p>
-      </section>
+    <section class="card">
+      <h2>📖 Introducción</h2>
+      <p>El evento de networking “Entre copas y contactos” busca transformar el concepto de After Office en una experiencia ideal para la comunidad profesional local. El objetivo principal es aprovechar el ambiente cálido y distintivo de La Oficina Bar como un espacio estratégico para crear vínculos profesionales, ampliar redes, intercambiar ideas y generar oportunidades de colaboración en un entorno distendido.</p>
+    </section>
 
-      <section class="card">
-        <h2>🎯 Objetivos</h2>
-        <ul>
-          <li>🤝 Promover networking en un ambiente relajado.</li>
-          <li>🌐 Ampliar redes de contacto en la comunidad local.</li>
-          <li>🏆 Posicionar a La Oficina Bar como punto de encuentro profesional.</li>
-          <li>🍺 Impulsar integración y consumo responsable.</li>
-        </ul>
-      </section>
-    </div>
+    <section class="card">
+      <h2>🎯 Objetivos</h2>
+      <ul>
+        <li>🤝 Promover networking en un ambiente relajado.</li>
+        <li>🌐 Ampliar redes de contacto profesionales.</li>
+        <li>🏆 Posicionar La Oficina Bar como punto clave de encuentro en Engativá.</li>
+        <li>🍺 Impulsar integración y consumo responsable.</li>
+      </ul>
+    </section>
 
-    <div class="grid-3">
-      <section class="card">
-        <h2>🏢 La Empresa</h2>
-        <p><strong>La Oficina Bar</strong> en Engativá, Bogotá, ofrece bebidas, música y bolirana en un ambiente relajado y divertido.</p>
-      </section>
+    <section class="card">
+      <h2>🏢 La Oficina Bar</h2>
+      <h3>📍 Qué hace</h3>
+      <p>La Oficina Bar está ubicado en la localidad de Engativá, barrio Engativá pueblo, dirección carrera 121 #65-29 piso 1, Bogotá. Allí se disfrutan cervezas frías, licores, buena música y partidas o campeonatos de bolirana en un ambiente relajado y divertido.</p>
+      <h3>💼 A qué se dedica</h3>
+      <p>Expendio de bebidas alcohólicas y prestación de servicios de bar, música y actividades de esparcimiento y recreación.</p>
+      <h3>📅 Trayectoria</h3>
+      <p>Fecha de apertura: 30 de junio de 2022.</p>
+      <h3>🎯 Misión</h3>
+      <p>Brindar a los clientes un espacio acogedor y seguro en Engativá para disfrutar de bebidas, música y bolirana, fomentando diversión e integración.</p>
+      <h3>🚀 Visión</h3>
+      <p>Ser reconocidos en Bogotá como bar de referencia en Engativá por su ambiente auténtico, calidad de bebidas y promoción de la bolirana.</p>
+      <h3>💡 Valores</h3>
+      <ul>
+        <li>😊 Amabilidad</li>
+        <li>🎶 Tradición</li>
+        <li>🥳 Diversión</li>
+        <li>🤝 Respeto</li>
+        <li>🔥 Compromiso</li>
+      </ul>
+      <h3>👥 Clientes</h3>
+      <p>Mayores de edad, principalmente de Engativá y sectores cercanos, que buscan un lugar de encuentro para compartir bebidas, bolirana y networking.</p>
+    </section>
 
-      <section class="card">
-        <h2>👥 Público Objetivo</h2>
-        <p>Emprendedores, empresarios, freelancers y creativos mayores de edad que busquen ampliar su red de contactos en un espacio profesional.</p>
-      </section>
+    <section class="card">
+      <h2>📌 Justificación del Evento</h2>
+      <p>Este evento busca dar mayor visibilidad al portafolio de bebidas de La Oficina Bar, destacar la bolirana como entretenimiento y fortalecer la identidad del lugar como un espacio de encuentro en Engativá. Se busca atraer nuevos clientes, fidelizar a los actuales y posicionar la marca como referente de integración, tradición y diversión.</p>
+    </section>
 
-      <section class="card">
-        <h2>💡 Valores</h2>
-        <ul>
-          <li>😊 Amabilidad</li>
-          <li>🎶 Tradición</li>
-          <li>🥳 Diversión</li>
-          <li>🤝 Respeto</li>
-          <li>🔥 Compromiso</li>
-        </ul>
-      </section>
-    </div>
+    <section class="card">
+      <h2>👥 Público Objetivo</h2>
+      <p>Emprendedores, empresarios, freelancers y creativos mayores de edad que busquen ampliar su red en un espacio cálido y profesional.</p>
+    </section>
 
     <section class="card">
       <h2>📅 Detalles del Evento</h2>
-      <div class="grid-3">
-        <div class="meta">📆 Jueves 19 de septiembre</div>
-        <div class="meta">⏰ 6:00 pm – 10:00 pm</div>
-        <div class="meta">📍 La Oficina Bar, Engativá</div>
-        <div class="meta">🎟 Entrada: $20,000 COP</div>
-      </div>
+      <div class="meta">📆 Jueves 19 de septiembre</div>
+      <div class="meta">⏰ 6:00 pm – 10:00 pm</div>
+      <div class="meta">📍 La Oficina Bar, Engativá</div>
+      <div class="meta">🎟 Entrada: $20,000 COP</div>
     </section>
 
     <section class="card">
-      <h2>💰 Presupuesto y Recursos</h2>
-      <div class="grid-3">
-        <div>
-          <h3>🎨 Decoración & Materiales</h3>
-          <ul>
-            <li>✨ Decoración: $100k – $300k COP</li>
-            <li>📝 Materiales networking: $150k – $300k COP</li>
-          </ul>
-        </div>
-        <div>
-          <h3>🍹 Bebidas & Comida</h3>
-          <ul>
-            <li>🍸 Cócteles: $10k – $15k</li>
-            <li>🍺 Cerveza: $4k – $8k</li>
-            <li>🥪 Snacks: $3k – $7k</li>
-          </ul>
-        </div>
-        <div>
-          <h3>📢 Publicidad & Personal</h3>
-          <ul>
-            <li>📱 Publicidad digital: $100k – $200k</li>
-            <li>💵 Caja: $100k – $150k</li>
-            <li>🧑‍🍳 Meseros: $80k – $120k</li>
-          </ul>
-        </div>
-      </div>
+      <h2>💰 Precios y Recursos</h2>
+      <h3>🎨 Decoración y Materiales</h3>
+      <ul>
+        <li>Decoración sencilla (luces, arreglos, manteles): $100k – $300k COP</li>
+        <li>Materiales (tarjetas, bolígrafos, blocs): $150k – $300k COP</li>
+      </ul>
+      <h3>🍹 Bebidas</h3>
+      <ul>
+        <li>Cócteles: $10k – $15k</li>
+        <li>Cerveza: $4k – $8k</li>
+        <li>Aguardiente (media/botella): $35k – $80k</li>
+        <li>Whisky: $90k – $250k</li>
+      </ul>
+      <h3>🎶 Música</h3>
+      <ul>
+        <li>Spotify Premium: $17k/mes</li>
+        <li>YouTube Premium: $23k/mes</li>
+      </ul>
+      <h3>📢 Publicidad</h3>
+      <ul>
+        <li>Publicidad digital (FB, IG, afiches): $100k – $200k</li>
+      </ul>
+      <h3>🍴 Comida</h3>
+      <ul>
+        <li>Empanadas: $3k c/u</li>
+        <li>Sándwiches: $6k c/u</li>
+        <li>Snacks: $3k – $7k c/u</li>
+      </ul>
+      <h3>🧑‍🍳 Personal</h3>
+      <ul>
+        <li>Caja: $100k – $150k</li>
+        <li>Meseros: $80k – $120k</li>
+      </ul>
+      <p>👥 Estimado: 50 – 80 participantes.<br>🏆 Premio bolirana: $200k – $800k.<br>🎲 Se juega con 6 personas por tanda, cada uno pide una tanda de cerveza.</p>
     </section>
 
-    <section class="promo">🚨 ¡Cupos limitados! Regístrate pronto y asegura tu lugar en la experiencia de networking más esperada del año 🍷🤝</section>
+    <section class="promo">🚨 ¡Cupos limitados! Asegura tu entrada para vivir la experiencia de networking más esperada del año 🍷🤝</section>
 
     <section class="card" style="text-align:center">
       <h2>📩 Contacto</h2>
