--- a/index.html
+++ b/index.html
@@ -142,7 +142,9 @@
       <p>👥 Estimado: 50 – 80 participantes.<br>🏆 Premio bolirana: $200k – $800k.<br>🎲 Se juega con 6 personas por tanda, cada uno pide una tanda de cerveza.</p>
     </section>
 
-    <section class="promo">🚨 ¡Cupos limitados! Asegura tu entrada para vivir la experiencia de networking más esperada del año 🍷🤝</section>
+    <section class="promo">🚨 ¡Cupos muy limitados! Asegura tu entrada para vivir la experiencia de networking más esperada del año 🍷🤝</section>
+
+
   </div>
 
   <footer>
