--- a/index.html
+++ b/index.html
@@ -142,9 +142,13 @@
       <p>👥 Estimado: 50 – 80 participantes.<br>🏆 Premio bolirana: $200k – $800k.<br>🎲 Se juega con 6 personas por tanda, cada uno pide una tanda de cerveza.</p>
     </section>
 
-    <section class="promo">🚨 ¡Cupos muy limitados! Asegura tu entrada para vivir la experiencia de networking más esperada del año 🍷🤝</section>
+    <section class="promo">🚨 ¡Cupos limitados! Asegura tu entrada para vivir la experiencia de networking más esperada del año 🍷🤝</section>
 
-
+    <section class="card" style="text-align:center">
+      <h2>📩 Contacto</h2>
+      <p>¿Deseas asistir, reservar espacios o explorar patrocinio?</p>
+      <a class="btn" href="">👉 Confirma tu asistencia</a>
+    </section>
   </div>
 
   <footer>
